chore(login/signup): fixed the layout issues

--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -5,8 +5,8 @@ body {
     background: #fafafa;
     height: 100%;
     width: 100%;
-    margin: 0px;
-    padding: 0px;
+    margin: 0px !important;
+    padding: 0px !important;
     letter-spacing: -0.2px;
     -webkit-font-smoothing: auto;
     text-rendering: optimizeLegibility;
